# op-move

./: .gitignore  Cargo.toml  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: build.yaml  build_and_run_tests.yaml  deploy.yaml  integration.yaml
api/: Cargo.toml
api/src/: evm_compat.rs  json_utils.rs  jsonrpc.rs  lib.rs  method_name.rs  request.rs
api/src/methods/: block_number.rs  call.rs  chain_id.rs  client_version.rs  estimate_gas.rs  fee_history.rs  forkchoice_updated.rs  gas_price.rs  get_balance.rs  get_block_by_hash.rs  get_block_by_number.rs  get_code.rs  get_module.rs  get_nonce.rs  get_payload.rs  get_proof.rs  get_resource.rs  get_resource_output.json  get_storage_at.rs  get_table_item.rs  get_transaction_by_hash.rs  get_transaction_receipt.rs  list_modules.rs  list_resources.rs  max_priority_fee_per_gas.rs  mod.rs  new_payload.rs  send_raw_transaction.rs
api/src/schema/: engine.rs  eth.rs  mod.rs  mv.rs
app/: Cargo.toml  build.rs
app/src/: actor.rs  block_hash.rs  command.rs  dependency.rs  factory.rs  input.rs  lib.rs  mempool.rs  query.rs  tests.rs  uninit.rs
blockchain/: Cargo.toml
blockchain/src/: in_memory.rs
blockchain/src/block/: gas.rs  hash.rs  in_memory.rs  mod.rs  read.rs  write.rs
blockchain/src/payload/: id.rs  in_memory.rs  mod.rs  read.rs
blockchain/src/receipt/: in_memory.rs  read.rs  write.rs
blockchain/src/state/: mod.rs  read.rs
blockchain/src/state/read/: convert.rs  eth_trie.rs  in_memory.rs  mod.rs  model.rs  response.rs  test_doubles.rs  tests.rs
blockchain/src/state/read/response/: abi.rs  conversions.rs  mod.rs
blockchain/src/transaction/: in_memory.rs  read.rs  write.rs
docker/: Dockerfile.foundry  Dockerfile.geth  Dockerfile.op-batcher  Dockerfile.op-geth  Dockerfile.op-move  Dockerfile.op-node  Dockerfile.op-proposer  Dockerfile.optimism  geth-init.sh  geth.sh  op-geth.sh  op-move.sh  op-node.sh
docker/host/: balance.sh  deploy.sh  deposit.sh
engine-api/src/: request.rs  schema.rs
engine-api/src/methods/: chain_id.rs  forkchoice_updated.rs  get_balance.rs  get_block_by_hash.rs  get_block_by_number.rs  get_payload.rs  mod.rs  new_payload.rs  send_raw_transaction.rs
engine-api/src/schema/: block.rs
evm-ext/: Cargo.toml
evm-ext/src/: erc20.rs  events.rs  lib.rs  native_evm_context.rs  native_impl.rs  solidity_abi.rs  state_changes.rs  type_utils.rs
evm-ext/src/state/: block_hash.rs  mod.rs  storage.rs
execution/: Cargo.toml
execution/src/: canonical.rs  deposited.rs  eth_token.rs  execute.rs  gas.rs  lib.rs  nonces.rs  resolver_cache.rs  session_id.rs  simulate.rs  table_changes.rs  tag_validation.rs  transaction.rs
execution/src/tests/: data_type.rs  erc20.rs  evm_native.rs  gas_cost.rs  mod.rs  natives.rs  signer.rs  transaction.rs  transfer.rs  utils.rs
execution/src/tests/erc20/: interface.rs  mod.rs  move_impl.rs  tx_impl.rs
execution/src/tests/res/hello-strings/sources/: hello_strings.move
genesis/: Cargo.toml
genesis-builder/: Cargo.toml
genesis-builder/src/: main.rs
genesis-image/: Cargo.toml  build.rs
genesis-image/src/: lib.rs
genesis/src/: bridged_tokens.rs  config.rs  framework.rs  l2_contracts.rs  lib.rs  serde.rs  vm.rs
moved/: Cargo.toml
moved/src/: state_actor.rs  storage.rs
moved/src/block/: gas.rs  in_memory.rs  mod.rs
moved/src/methods/: forkchoice_updated.rs  get_payload.rs  new_payload.rs  send_raw_transaction.rs
moved/src/move_execution/: canonical.rs  deposited.rs  eth_token.rs  evm_native.rs  gas.rs  mod.rs  simulate.rs  tests.rs
moved/src/move_execution/evm_native/: tests.rs
moved/src/move_execution/tests/: gas_cost.rs  l2_cost.rs  mod.rs  transfer.rs  utils.rs
moved/src/state_actor/: queries.rs
moved/src/types/: state.rs  transactions.rs
rocksdb/: Cargo.toml
rocksdb/src/: lib.rs  move.rs  moved.rs
sdk/hardhat-example/: README.md  hardhat.config.ts  package.json
sdk/hardhat-example/scripts/: deploy.ts
sdk/hardhat-umi/: README.md  package.json
sdk/hardhat-umi/src/: index.ts
server/: Cargo.toml
server/args/: Cargo.toml
server/args/src/: declaration.rs  lib.rs  stack.rs  tests.rs
server/args/src/layers/: cli.rs  default.rs  env.rs  file.rs  mod.rs
server/benches/perf/: main.rs
server/benches/perf/queue/: input.rs  tests.rs
server/src/: allow.rs  geth_genesis.rs  lib.rs  main.rs  mirror.rs
server/src/dependency/: heed.rs  in_memory.rs  mod.rs  rocksdb.rs  shared.rs
server/src/tests/: config.sh  evm_contracts.rs  get_proof.rs  integration.rs  listing_apis.rs  mod.rs  payload.rs  table_api.rs  test_context.rs
server/src/tests/evm_contracts/: account_storage.rs  block_env.rs  block_env_contract.hex  blockhash.rs  mod.rs
server/src/tests/integration/: erc20.rs  withdrawal.rs
server/src/tests/res/: counter.hex  tables.hex
shared/: Cargo.toml
shared/src/: error.rs  iter.rs  lib.rs  primitives.rs  resolver_utils.rs
state/: Cargo.toml
state/src/: diff.rs  in_memory.rs  lib.rs  nodes.rs  resolver.rs  skip_list.rs  state.rs
storage/heed/: Cargo.toml
storage/heed/src/: all.rs  block.rs  evm.rs  evm_storage_trie.rs  generic.rs  payload.rs  receipt.rs  state.rs  transaction.rs  trie.rs
storage/rocksdb/: Cargo.toml
storage/rocksdb/src/: block.rs  evm.rs  evm_storage_trie.rs  generic.rs  lib.rs  payload.rs  receipt.rs  state.rs  transaction.rs  trie.rs
storage/rocksdb/tests/: collision.rs  common.rs
trie/: Cargo.toml
trie/src/: constructor.rs  lib.rs
