[package]
description = "Umi execution Ethereum JSON-RPC API"
edition.workspace = true
name = "umi-api"
version.workspace = true

[lints]
workspace = true

[dependencies]
alloy.workspace = true
bcs.workspace = true
umi-app.workspace = true
umi-blockchain.workspace = true
umi-evm-ext.workspace = true
umi-execution.workspace = true
umi-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy.workspace = true
move-core-types.workspace = true
umi-app.features = ["test-doubles"]
umi-app.workspace = true
umi-evm-ext.features = ["test-doubles"]
umi-evm-ext.workspace = true
umi-blockchain.features = ["test-doubles"]
umi-blockchain.workspace = true
umi-genesis.workspace = true
umi-genesis-image.workspace = true
umi-state.workspace = true
op-alloy.workspace = true
test-case.workspace = true
