[package]
name = "umi-app"
description = "Umi application layer for orchestration logic"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = [
    "umi-blockchain/test-doubles",
    "umi-execution/test-doubles",
    "umi-evm-ext/test-doubles",
]

[lints]
workspace = true

[dependencies]
alloy.workspace = true
alloy-trie.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
umi-blockchain.workspace = true
umi-evm-ext.workspace = true
umi-execution.workspace = true
umi-genesis.workspace = true
umi-shared.workspace = true
umi-state.workspace = true
op-alloy.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
umi-evm-ext.features = ["test-doubles"]
umi-evm-ext.workspace = true
umi-execution.features = ["test-doubles"]
umi-execution.workspace = true
umi-blockchain.features = ["test-doubles"]
umi-blockchain.workspace = true
umi-genesis-image.workspace = true
test-case.workspace = true
