[package]
name = "umi-blockchain"
description = "Layer-2 Optimism specific blockchain"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []
op-upgrade = []

[lints]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
aptos-types.workspace = true
aptos-api-types.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-resource-viewer.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
umi-evm-ext.workspace = true
umi-execution.workspace = true
umi-genesis.workspace = true
umi-shared.workspace = true
umi-state.workspace = true
op-alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sha2.workspace = true
evmap.workspace = true

[dev-dependencies]
umi-genesis-image.workspace = true
test-case.workspace = true
