[package]
name = "umi-execution"
description = "Execution of smart contracts written in the Move language"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[lints]
workspace = true

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
aptos-framework.workspace = true
aptos-gas-algebra.workspace = true
aptos-gas-meter.workspace = true
aptos-gas-schedule.workspace = true
aptos-table-natives.workspace = true
aptos-types.workspace = true
aptos-vm.workspace = true
bcs.workspace = true
bytes.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
umi-evm-ext.workspace = true
umi-genesis.workspace = true
umi-shared.workspace = true
umi-state.workspace = true
op-alloy.workspace = true
regex.workspace = true
revm.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
move-compiler.workspace = true
move-compiler-v2.workspace = true
move-model.workspace = true
umi-genesis-image.workspace = true
