[package]
name = "umi-genesis-image"
description = "Builds and embeds an image of the genesis blockchain state into the binary for instantaneous loading"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[dependencies]
bcs.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
umi-genesis.workspace = true
umi-evm-ext.workspace = true
umi-state.workspace = true

[build-dependencies]
aptos-table-natives.workspace = true
bcs.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
umi-genesis.workspace = true
umi-evm-ext.workspace = true
umi-state.workspace = true
