[package]
name = "umi-server"
description = "Umi execution HTTP server (using warp)"
version = "0.1.0"
edition = "2021"

[features]
default = []
storage = ["storage-lmdb"]
storage-lmdb = ["umi-storage-heed"]
storage-rocksdb = ["umi-storage-rocksdb"]

[lints]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
aptos-types.workspace = true
bcs.workspace = true
clap.workspace = true
flate2.workspace = true
hex.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
umi-api.workspace = true
umi-app.workspace = true
umi-blockchain.workspace = true
umi-evm-ext.workspace = true
umi-execution.workspace = true
umi-genesis.workspace = true
umi-shared.workspace = true
umi-state.workspace = true
umi-storage-heed.optional = true
umi-storage-heed.workspace = true
umi-storage-rocksdb.optional = true
umi-storage-rocksdb.workspace = true
umi-server-args.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
warp.workspace = true

[dev-dependencies]
criterion.workspace = true
dotenvy.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-vm-runtime.workspace = true
umi-evm-ext.workspace = true
umi-genesis-image.workspace = true
openssl.workspace = true

[[bin]]
name = "op-move"
path = "src/main.rs"

[[bench]]
name = "perf"
harness = false
