[package]
name = "umi-state"
description = "Defines the domain of blockchain state"
version.workspace = true
edition.workspace = true

[features]
default = []
test-doubles = []

[lints]
workspace = true

[dependencies]
alloy.workspace = true
aptos-table-natives.workspace = true
aptos-types.workspace = true
bcs.workspace = true
bytes.workspace = true
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-types.workspace = true
move-vm-test-utils.workspace = true
umi-evm-ext.workspace = true
umi-shared.workspace = true
umi-trie.workspace = true
