[package]
name = "umi-storage-heed"
description = "Umi node integration with LMDB persistent storage engine via Heed bindings"
version.workspace = true
edition.workspace = true

[dependencies]
eth_trie.workspace = true
heed.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-types.workspace = true
umi-blockchain.workspace = true
umi-evm-ext.workspace = true
umi-execution.workspace = true
umi-shared.workspace = true
umi-state.workspace = true
umi-trie.workspace = true
serde.workspace = true
serde_json.workspace = true
