[package]
name = "umi-storage-rocksdb"
description = "Umi node integration with RocksDB persistent storage engine"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
eth_trie.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-table-extension.workspace = true
move-vm-types.workspace = true
umi-blockchain.workspace = true
umi-evm-ext.workspace = true
umi-execution.workspace = true
umi-shared.workspace = true
umi-state.workspace = true
umi-trie.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy.workspace = true
hex-literal.workspace = true
op-alloy.workspace = true
